<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:backgroundTint="@color/purple_200"
        android:text="@string/layout0_top_left_text"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:backgroundTint="@color/teal_200"
        android:text="@string/layout0_top_right_text"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:backgroundTint="@color/purple_700"
        android:text="@string/layout0_bottom_left_text"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:backgroundTint="@color/teal_700"
        android:text="@string/layout0_bottom_right_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>