<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_200">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".25"
        android:orientation="vertical"
        android:id="@+id/layout2_vertical_25_guideline"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/layout1_100_guideright_text"
        android:id="@+id/layout1_100_guideright"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/layout2_vertical_25_guideline"
        android:layout_marginTop="100dp"
        android:background="@color/teal_200"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/layout2_vertical_25_guideline"
        app:layout_constraintTop_toBottomOf="@id/layout1_100_guideright"
        android:layout_marginTop="10dp"

        android:background="@color/teal_700"
        android:text="@string/layout1_under_textview_text"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/layout2_vertical_25_guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:background="@color/black"
        android:text="@string/layout2_centered_text"/>

    <androidx.appcompat.widget.AppCompatToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/layout2_vertical_25_guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:background="@color/white"
        android:textOff="@string/layout2_center_bottom_toggle_on"
        android:textOn="@string/layout2_center_bottom_toggle_off"/>

</androidx.constraintlayout.widget.ConstraintLayout>