<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout5_scrollbuttons">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15"
        android:id="@+id/layout5_guideline"/>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="@id/layout5_guideline"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:id="@+id/layout5_button1"
                android:text="@string/layout5_button1_text"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/layout5_button1"
                app:layout_constraintTop_toTopOf="parent"

                android:id="@+id/layout5_button2"
                android:text="@string/layout5_button2_text"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/layout5_button2"
                app:layout_constraintTop_toTopOf="parent"

                android:id="@+id/layout5_button3"
                android:text="@string/layout5_button3_text"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/layout5_button3"
                app:layout_constraintTop_toTopOf="parent"

                android:id="@+id/layout5_button4"
                android:text="@string/layout5_button4_text"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/layout5_button4"
                app:layout_constraintTop_toTopOf="parent"

                android:id="@+id/layout5_button5"
                android:text="@string/layout5_button5_text"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/layout5_button5"
                app:layout_constraintTop_toTopOf="parent"

                android:id="@+id/layout5_button6"
                android:text="@string/layout5_button6_text"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>